--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Code with Love!</title>
   </head>
   <body>
     <h1>My First Github Class</h1>
+    <script src="./script.js"></script>
   </body>
 </html>
