--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>My First Github Class</h1>
+    <script src="./h1logic.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
